--- a/testes/package.json
+++ b/testes/package.json
@@ -8,5 +8,8 @@
   "type": "module",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.20.0"
+  }
 }
