--- a/testes/package.json
+++ b/testes/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.20.0"
+    "express": "^4.20.0",
+    "pg": "^8.12.0",
+    "sequelize": "^6.37.3"
   }
 }
